2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Codons/LocalCommandItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/ItemSetCodon.cs,
	  MonoDevelop.Core.Gui.Codons/LinkItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/CommandCategoryCodon.cs,
	  MonoDevelop.Core.Gui.Codons/CommandItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/CommandCodon.cs,
	  MonoDevelop.Core.Gui.Codons/SeparatorItemCodon.cs,
	  MonoDevelop.Core.Gui/CommandService.cs, Makefile.am,
	  MonoDevelop.Core.Gui.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui/ResourceService.cs,
	  Makefile.am, MonoDevelop.Core.Gui.addin.xml: Reorganized the extension
	  point hierarchy. Embedded all add-in manifests as resources.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Components/FileBrowser.cs,
	  MonoDevelop.Core.Gui/GuiService.cs: Avoid using the ServiceManager for
	  classes that are not registered as services.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/MessageService.cs,
	  MonoDevelop.Core.Gui/GuiService.cs,
	  MonoDevelop.Core.Gui/ResourceService.cs, MonoDevelop.Core.Gui.addin.xml:
	  API cleanup. Converted core services into regular classes.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui.Dialogs/ResourceService.cs,
	  MonoDevelop.Core.Gui/ResourceService.cs, Makefile.am: Moved
	  ResourceService to the correct location.
	* MonoDevelop.Core.Gui/DispatchService.cs: DispatchService is not a service
	  anymore.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.addin.xml: DispatchServices is now a static class.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/DispatchService.cs,